# franken-game-jam-2024-scripty

./: .gitignore  README.md  flake.nix  pyproject.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: c8ws68abv5ic31w0x5vr5bjflfjbf8q3-source
src/: main.py
src/messOS/: __main__.py  filesystem.py
src/messOS/annoyances/: __init__.py
src/messOS/tasks/: __init__.py  backup_files.py  research_literature.py  sortFiles.py  sort_files.py
src/messOS/tasks/shred_files/: __init__.py
src/messOS/tasks/shred_files/Homeworks/: philosophy.mkv
src/tasks/: sortFiles.py
