[project]
name = 'messOS'
version = 'v0.0.1'
readme = 'README.md'
requires-python = '>=3.12'
authors = [
  {name = 'Dennis Streicher (Stennsen)'},
  {name = 'Timm Bugla (Timm638)'},
]
classifiers = [
  'Development Status :: 2 - Pre-Alpha',
  'Programming Language :: Python'
]

dependencies = [
  'termcolor==2.5.0',
  'textual',
  'PythonOverlayLib',
  'mouse',
  'watchdog',
  'python-vlc'
]

[project.optional-dependencies]
dev = [
  'mypy'
]

[project.scripts]
'messOS' = 'messOS:__main__'